[gd_scene load_steps=3 format=3 uid="uid://dddblpsohwys0"]

[ext_resource type="Script" path="res://Components/attack_component.gd" id="1_fvte2"]

[sub_resource type="SphereShape3D" id="SphereShape3D_jpat8"]
radius = 6.0

[node name="AttackComponent" type="Node3D"]
script = ExtResource("1_fvte2")
attack_damage = 10
detection_range = 10.0
attack_range = 8.0

[node name="AttackRange" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
visible = false
collision_layer = 0
collision_mask = 14

[node name="CollisionShape3D" type="CollisionShape3D" parent="AttackRange"]
shape = SubResource("SphereShape3D_jpat8")

[node name="BulletSpawner" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.4, -1)

[connection signal="body_entered" from="AttackRange" to="." method="_on_attack_range_body_entered"]
[connection signal="body_exited" from="AttackRange" to="." method="_on_attack_range_body_exited"]
